* Added Imageloaded JS * Fixed Isotope image overlapping issue * Fixed some Anchor Tag Problems in Isotope section's Hover Part

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -673,8 +673,9 @@ $alt_back: #f1f1f1;
                             background: #000;
                             position: relative;
                             transition: .3s;
+                            display: inline-block;
                             -webkit-transition: .3s;
-                            margin: 10px auto 0 auto;
+                            margin-top: 10px;
                             transform: translateY(5px);
 
                             i
